--- a/index - White.html
+++ b/index - White.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="style.css" rel="stylesheet">
+    <link href="style white.css" rel="stylesheet">
     <title>⌬ Inicio </title>
 </head>
 
@@ -18,12 +18,12 @@
         <div id="pesquisaBar">
             <!--Barra de pesquisa-->
             <div class="input-group mb-3 p-3 mb-2">
-                <span id="setaAbre" class="input-group-text rounded-left text-success p-1 mb-1 bg-transparent"><font color="chartreuse"><"</font></span>
+                <span id="setaAbre" class="input-group-text rounded-left text-success p-1 mb-1 bg-transparent"><font color="black"><"</font></span>
                 <div id="pesquisa" class="form-floating mb-3 text-success bg-transparent">
-                    <input type="email" id="pesquisaS" class="form-control text-white rounded-0 bg-transparent" id="floatingInput" placeholder="Como está o clima hoje?">
-                    <label class="outline bg-transparent" for="floatingInput"> <font color="chartreuse">Search for...</font></label>
+                    <input type="email" id="pesquisaS" class="form-control text-black rounded-0 bg-transparent" id="floatingInput" placeholder="Como está o clima hoje?">
+                    <label class="outline bg-transparent" for="floatingInput"> <font color="black">Search for...</font></label>
                 </div>
-                <span id="setaFecha" class="input-group-text text-success rounded-right p-1 mb-1 bg-transparent"><font color="chartreuse">"></font></span>
+                <span id="setaFecha" class="input-group-text text-success rounded-right p-1 mb-1 bg-transparent"><font color="black">"></font></span>
             </div>
         </div>
         <!--Fim da barra de pesquisa-->
@@ -42,5 +42,6 @@
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
 <script type="text/javascript" src="script.js"></script>
+
 
 </html>
